exports[`test renders 800m instead of 0.8km for distance 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#FAF6F1",
      "borderTopWidth": 12,
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 3,
        "flexDirection": "column",
        "marginTop": 10,
      }
    }>
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          undefined,
        ]
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#CECED2",
            "fontSize": 15,
            "marginTop": 6,
          },
        ]
      }>
      A 
      800m
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 8,
        "flexDirection": "column",
        "paddingVertical": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#44B5B1",
            },
            Object {
              "fontFamily": "Avenir-Black",
            },
          ],
        ]
      }>
      Foo
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
         
        pediu 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#000000",
                "fontSize": 15,
              },
            ],
          ]
        }>
        há 47 anos
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#807F7F",
              "fontSize": 15,
              "marginTop": 10,
            },
          ],
        ]
      }>
      Foo Bar
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Ionicons",
            "fontSize": 27,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#CECED2",
            "fontSize": 42,
            "marginTop": 6,
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;

exports[`test renders borderTopWidth 0 when index is 0 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#FAF6F1",
      "borderTopWidth": 0,
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 3,
        "flexDirection": "column",
        "marginTop": 10,
      }
    }>
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          undefined,
        ]
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#CECED2",
            "fontSize": 15,
            "marginTop": 6,
          },
        ]
      }>
      A 
      20km
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 8,
        "flexDirection": "column",
        "paddingVertical": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#44B5B1",
            },
            Object {
              "fontFamily": "Avenir-Black",
            },
          ],
        ]
      }>
      Foo
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
         
        pediu 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#000000",
                "fontSize": 15,
              },
            ],
          ]
        }>
        há 47 anos
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#807F7F",
              "fontSize": 15,
              "marginTop": 10,
            },
          ],
        ]
      }>
      Foo Bar
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Ionicons",
            "fontSize": 27,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#CECED2",
            "fontSize": 42,
            "marginTop": 6,
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;

exports[`test renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#FAF6F1",
      "borderTopWidth": 12,
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 3,
        "flexDirection": "column",
        "marginTop": 10,
      }
    }>
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          undefined,
        ]
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#CECED2",
            "fontSize": 15,
            "marginTop": 6,
          },
        ]
      }>
      A 
      20km
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 8,
        "flexDirection": "column",
        "paddingVertical": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#44B5B1",
            },
            Object {
              "fontFamily": "Avenir-Black",
            },
          ],
        ]
      }>
      Foo
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
         
        pediu 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#000000",
                "fontSize": 15,
              },
            ],
          ]
        }>
        há 47 anos
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#807F7F",
              "fontSize": 15,
              "marginTop": 10,
            },
          ],
        ]
      }>
      Foo Bar
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Ionicons",
            "fontSize": 27,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#CECED2",
            "fontSize": 42,
            "marginTop": 6,
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;

exports[`test renders showClose styles 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#FAF6F1",
      "borderTopWidth": 12,
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 3,
        "flexDirection": "column",
        "marginTop": 10,
      }
    }>
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          undefined,
        ]
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#CECED2",
            "fontSize": 15,
            "marginTop": 6,
          },
        ]
      }>
      A 
      20km
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 8,
        "flexDirection": "column",
        "paddingVertical": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#44B5B1",
            },
            Object {
              "fontFamily": "Avenir-Black",
            },
          ],
        ]
      }>
      Foo
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
         
        pediu 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#000000",
                "fontSize": 15,
              },
            ],
          ]
        }>
        há 47 anos
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#807F7F",
              "fontSize": 15,
              "marginTop": 10,
            },
          ],
        ]
      }>
      Foo Bar
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Ionicons",
              "fontSize": 27,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "backgroundColor": "transparent",
              "color": "#CECED2",
              "fontSize": 33,
              "paddingBottom": 4,
              "paddingHorizontal": 8,
              "paddingTop": 4,
              "textAlign": "center",
            },
          ]
        }>
        
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Ionicons",
            "fontSize": 27,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#EFEDED",
            "fontSize": 42,
            "marginTop": 18,
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;

exports[`test renders user first_name if user is not the currentUser 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#FAF6F1",
      "borderTopWidth": 12,
      "flex": 1,
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID={undefined}>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 3,
        "flexDirection": "column",
        "marginTop": 10,
      }
    }>
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 27,
            "height": 54,
            "width": 54,
          },
          undefined,
        ]
      } />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Object {
            "color": "#CECED2",
            "fontSize": 15,
            "marginTop": 6,
          },
        ]
      }>
      A 
      20km
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 8,
        "flexDirection": "column",
        "paddingVertical": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#44B5B1",
            },
            Object {
              "fontFamily": "Avenir-Black",
            },
          ],
        ]
      }>
      Foo
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Object {
              "color": "#000000",
              "fontSize": 15,
            },
          ]
        }>
         
        pediu 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#654C50",
              "fontFamily": "Avenir",
              "fontSize": 18,
            },
            Array [
              Object {
                "fontSize": 13.5,
              },
              Object {
                "color": "#000000",
                "fontSize": 15,
              },
            ],
          ]
        }>
        há 47 anos
      </Text>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Avenir",
            "fontSize": 18,
          },
          Array [
            Object {
              "color": "#807F7F",
              "fontSize": 15,
              "marginTop": 10,
            },
          ],
        ]
      }>
      Foo Bar
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#654C50",
            "fontFamily": "Ionicons",
            "fontSize": 27,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "backgroundColor": "transparent",
            "color": "#CECED2",
            "fontSize": 42,
            "marginTop": 6,
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;
